chore: migrated data to postgres docker container

--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@
 APP_PORT=8080 # application port
 APP_ENV=development # development|production|test
 APP_FILL=true # true|false (fill data on app start)
-APP_MIGRATIONS=file://migrations # path to migrations files
-APP_DSN= "postgres://postgres:admin@db:5432/example?sslmode=disable"
+APP_MIGRATIONS=file:/pkg/social_media/migrations # path to migrations files
+APP_DSN=postgres://postgres:admin@db:5432/social_media?sslmode=disable
 
 # DB config
 POSTGRES_USER=postgres # database user
-POSTGRES_DB=demo-app # database name
+POSTGRES_DB=social_media # database name
