--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,16 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 8081:8080
+      - 8091:80
     depends_on:
       - db
     environment:
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DB_USER=postgres
       - DB_PASSWORD=admin
+      - DB_NAME=social_media
+    
 
   db:
     image: postgres:16
@@ -20,6 +25,14 @@ services:
       - "5433:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+
+  migrate:
+    image: migrate/migrate
+    volumes:
+      - ./pkg/social-media/migrations:/migrations
+    command: ["-path", "/migrations", "-database",  "postgres://postgres:admin@db:5432/social_media?sslmode=disable", "up"]
+    depends_on:
+      - db
 
 volumes:
   pgdata:
